# claudenv

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
scaffold/.claude/agents/: hypothesis-tester.md  rollback-analyzer.md
scaffold/.claude/commands/: init-docs.md  update-docs.md
scaffold/.claude/skills/doc-generator/scripts/: validate.sh
scaffold/.claude/skills/doc-generator/templates/: mcp-servers.md
scaffold/global/.claude/commands/: autonomy.md  claudenv.md  setup-mcp.md
scaffold/global/.claude/skills/claudenv/: SKILL.md
scaffold/global/.claude/skills/claudenv/scaffold/.claude/agents/: doc-analyzer.md
scaffold/global/.claude/skills/claudenv/scaffold/.claude/commands/: improve.md  setup-mcp.md  update-docs.md  validate-docs.md
scaffold/global/.claude/skills/claudenv/scaffold/.claude/skills/doc-generator/: SKILL.md
scaffold/global/.claude/skills/claudenv/scaffold/.claude/skills/doc-generator/templates/: detection-patterns.md
src/: autonomy.js  constants.js  detector.js  generator.js  hooks-gen.js  index.js  installer.js  loop.js  profiles.js  prompts.js  report.js  validator.js  worktree.js
templates/: claude-md.ejs  rules-code-style.ejs  rules-testing.ejs  rules-workflow.ejs  settings-json.ejs  state-md.ejs
test/: autonomy.test.js  detector.test.js  generator.test.js  hooks-gen.test.js  installer.test.js  loop.test.js  profiles.test.js  validator.test.js  worktree.test.js
test/fixtures/go-project/: go.mod
test/fixtures/node-project/: package-lock.json  package.json
test/fixtures/python-project/: pyproject.toml
